--- a/roles/pgadmin4/meta/main.yml
+++ b/roles/pgadmin4/meta/main.yml
@@ -1,16 +1,13 @@
 ---
 galaxy_info:
-  author: aeric
+  author: ericsysmin
   description: Ansible role to configure pgadmin4
-  company: VMware
   license: Apache-2.0
   min_ansible_version: 2.9
   platforms:
     - name: Ubuntu
       versions:
-        - precise
-        - trusty
-        - wily
-        - xenial
+        - bionic
+        - focal
   galaxy_tags: []
 dependencies: []
