--- a/roles/mongodb/defaults/main.yml
+++ b/roles/mongodb/defaults/main.yml
@@ -4,3 +4,41 @@
 mongodb_install_service: true
 mongodb_install_client: true
 mongodb_ver: 4.4
+
+mongo_conf: |
+  # Where and how to store data.
+  storage:
+    dbPath: /var/lib/mongodb
+    journal:
+      enabled: true
+  #  engine:
+  #  wiredTiger:
+
+  # where to write logging data.
+  systemLog:
+    destination: file
+    logAppend: true
+    path: /var/log/mongodb/mongod.log
+
+  # network interfaces
+  net:
+    port: 27017
+    bindIp: 127.0.0.1
+
+  # how the process runs
+  processManagement:
+    timeZoneInfo: /usr/share/zoneinfo
+
+  #security:
+
+  #operationProfiling:
+
+  #replication:
+
+  #sharding:
+
+  ## Enterprise-Only Options:
+
+  #auditLog:
+
+  #snmp:
