--- a/roles/mongodb/meta/main.yml
+++ b/roles/mongodb/meta/main.yml
@@ -5,13 +5,12 @@ galaxy_info:
   company: ericsymsin
   description: This role enables users to install and configure mongodb on their hosts.
   license: MIT
-  min_ansible_version: 2.4
+  min_ansible_version: "2.9"
   platforms:
     - name: Ubuntu
       versions:
         - bionic
         - focal
-        - xenial
   galaxy_tags:
     - mongodb
     - database
