--- a/.github/workflows/mongodb.yml
+++ b/.github/workflows/mongodb.yml
@@ -30,8 +30,9 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v1
-        with:
-          path: ansible_collections/ericsysmin/databases
+
+      - name: List dir
+        run: ls -lart
 
       - name: Set up Python 3.8
         uses: actions/setup-python@v1
@@ -48,7 +49,7 @@ jobs:
 
       - name: Run role tests
         run: >-
-          ansible-lint ansible_collections/ericsysmin/databases/roles/${{ matrix.collection_role }} &&
+          ansible-lint roles/${{ matrix.collection_role }} &&
           molecule --version &&
           ansible --version &&
           MOLECULE_COMMAND=${{ matrix.molecule_distro.command }}
