--- a/.github/workflows/mongodb.yml
+++ b/.github/workflows/mongodb.yml
@@ -42,7 +42,7 @@ jobs:
           curl -fsSL https://get.docker.com -o get-docker.sh
           sudo sh get-docker.sh
           python -m pip install --upgrade pip
-          pip install -r roles/${{ matrix.collection_role }}/molecule/python-requirements.txt
+          pip install ansible molecule molecule-containers molecule-docker ansible-lint
 
       - name: Get Ansible and Molecule Version
         run: |
