--- a/roles/mongodb/defaults/main.yml
+++ b/roles/mongodb/defaults/main.yml
@@ -3,7 +3,7 @@
 
 mongodb_install_service: true
 mongodb_install_client: true
-mongodb_ver: 4.4
+mongodb_version: 4.4
 
 mongo_conf: |
   # Where and how to store data.
