missed config file when moving from copy to template

--- a/roles/mongodb/defaults/main.yml
+++ b/roles/mongodb/defaults/main.yml
@@ -5,7 +5,7 @@ mongodb_install_service: true
 mongodb_install_client: true
 mongodb_version: 4.4
 
-mongo_conf: |
+mongo_config: |
   # Where and how to store data.
   storage:
     dbPath: /var/lib/mongodb
