--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,11 +1,13 @@
 ---
+# code: language=ansible
+
 # tasks file for mongodb
 
 - name: MongoDB | OS Specific variables
-  ansible.builtin.include_vars: "{{ ansible_distribution|lower }}.yml"
+  ansible.builtin.include_vars: "{{ ansible_distribution | lower }}.yml"
 
 - name: MongoDB | OS Specific install
-  ansible.builtin.include_tasks: "{{ ansible_os_family|lower }}.yml"
+  ansible.builtin.include_tasks: "{{ ansible_os_family | lower }}.yml"
 
 - name: MongoDB | Configure MongoDB service
   ansible.builtin.service:
