--- a/roles/pgadmin4/meta/main.yml
+++ b/roles/pgadmin4/meta/main.yml
@@ -1,10 +1,12 @@
 ---
+# code: language=ansible
+
 galaxy_info:
   author: aeric
   description: Ansible role to configure pgadmin4
   company: VMware
   license: Apache-2.0
-  min_ansible_version: 2.9
+  min_ansible_version: "2.12"
   platforms:
     - name: Ubuntu
       versions:
