--- a/.github/workflows/postgresql.yml
+++ b/.github/workflows/postgresql.yml
@@ -45,8 +45,7 @@ jobs:
           curl -fsSL https://get.docker.com -o get-docker.sh
           sudo sh get-docker.sh
           python -m pip install --upgrade pip
-          pip install ansible molecule yamllint ansible-lint docker molecule-docker
-
+          pip install ansible molecule yamllint ansible-lint docker
       - name: Run role tests
         run: >-
           molecule --version &&
