--- a/roles/pgadmin4/tasks/debian.yml
+++ b/roles/pgadmin4/tasks/debian.yml
@@ -10,14 +10,14 @@
 
 - name: PgAdmin4 | Add apt key
   ansible.builtin.apt_key:
-    url: https://www.postgresql.org/media/keys/ACCC4CF8.asc
+    url: https://www.pgadmin.org/static/packages_pgadmin_org.pub
     state: present
 
 - name: PgAdmin4 | Add postgresql repository
   ansible.builtin.apt_repository:
-    repo: deb http://apt.postgresql.org/pub/repos/apt {{ ansible_distribution_release }}-pgdg main
+    repo: deb http://apt.postgresql.org/pub/repos/apt {{ ansible_distribution_release }} pgadmin4 main
     state: present
-    filename: pgdg
+    filename: pgadmin4
     update_cache: true
 
 - name: PgAdmin4 | Install pgAdmin4
