--- a/molecule/postgresql/molecule.yml
+++ b/molecule/postgresql/molecule.yml
@@ -11,11 +11,12 @@ lint: |
   ansible-lint
 platforms:
   - name: instance
-    image: ${MOLECULE_DISTRO:-ubuntu:xenial}
+    image: ${MOLECULE_DISTRO:-ubuntu-focal}
     privileged: true
     command: ${MOLECULE_COMMAND:-"sleep infinity"}
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
 provisioner:
   name: ansible
   playbooks:
