--- a/roles/mongodb/meta/main.yml
+++ b/roles/mongodb/meta/main.yml
@@ -1,17 +1,12 @@
 ---
+# code: language=ansible
 galaxy_info:
   author: ericsysmin
   role_name: mongodb
   company: ericsymsin
   description: This role enables users to install and configure mongodb on their hosts.
   license: MIT
-  min_ansible_version: 2.4
-  platforms:
-    - name: Ubuntu
-      versions:
-        - bionic
-        - focal
-        - xenial
+  min_ansible_version: "2.12"
   galaxy_tags:
     - mongodb
     - database
