updates to support new releases

--- a/.github/workflows/pgadmin4.yml
+++ b/.github/workflows/pgadmin4.yml
@@ -23,6 +23,7 @@ jobs:
         molecule_distro:
           - { distro: ubuntu-18.04, command: /lib/systemd/systemd }
           - { distro: ubuntu-20.04, command: /lib/systemd/systemd }
+          - { distro: ubuntu-22.04, command: /lib/systemd/systemd }
           - { distro: debian-10, command: /lib/systemd/systemd }
         collection_role:
           - pgadmin4
