add ubuntu 22.04 to mongo

--- a/.github/workflows/mongodb.yml
+++ b/.github/workflows/mongodb.yml
@@ -22,6 +22,7 @@ jobs:
       matrix:
         molecule_distro:
           - { distro: ubuntu-20.04, command: /lib/systemd/systemd }
+          - { distro: ubuntu-22.04, command: /lib/systemd/systemd }
           - { distro: debian-11, command: /lib/systemd/systemd }
         collection_role:
           - mongodb
