--- a/roles/mongodb/tasks/debian.yml
+++ b/roles/mongodb/tasks/debian.yml
@@ -3,11 +3,16 @@
 
 - name: MongoDB | Install dependent package
   ansible.builtin.apt:
-    name: gnupg
+    name:
+      - curl
+      - ca-certificates
+      - gnupg
 
 - name: MongoDB | Import apt key
   ansible.builtin.apt_key:
     url: https://www.mongodb.org/static/pgp/server-{{ mongodb_ver }}.asc
+    keyring: /usr/share/keyrings/mongodb-server-{{ mongodb_ver }}.gpg
+    state: present
 
 - name: MongoDB | Add apt repository
   ansible.builtin.apt_repository:
