--- a/.github/workflows/pgadmin4.yml
+++ b/.github/workflows/pgadmin4.yml
@@ -24,8 +24,10 @@ jobs:
           - { distro: ubuntu-18.04, command: /lib/systemd/systemd }
           - { distro: ubuntu-20.04, command: /lib/systemd/systemd }
           - { distro: ubuntu-22.04, command: /lib/systemd/systemd }
+          - { distro: ubuntu-24.04, command: /lib/systemd/systemd }
           - { distro: debian-10, command: /lib/systemd/systemd }
           - { distro: debian-11, command: /lib/systemd/systemd }
+          - { distro: debian-12, command: /lib/systemd/systemd }
         collection_role:
           - pgadmin4
     steps:
