--- a/.github/workflows/pgadmin4.yml
+++ b/.github/workflows/pgadmin4.yml
@@ -47,7 +47,7 @@ jobs:
           curl -fsSL https://get.docker.com -o get-docker.sh
           sudo sh get-docker.sh
           python -m pip install --upgrade pip
-          pip install ansible molecule yamllint ansible-lint molecule-plugins[docker]
+          pip install ansible molecule yamllint ansible-lint molecule-plugins[docker] docker
 
       - name: Run role tests
         run: >-
