--- a/roles/mongodb/vars/ubuntu.yml
+++ b/roles/mongodb/vars/ubuntu.yml
@@ -4,4 +4,4 @@
 mongodb_repository: deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-7.0.gpg ]
   https://repo.mongodb.org/apt/ubuntu
   {{ ansible_distribution_release }}/mongodb-org/{{ mongodb_ver }}
-  multiverse
+  main
