--- a/.github/workflows/mongodb.yml
+++ b/.github/workflows/mongodb.yml
@@ -24,7 +24,7 @@ jobs:
           - { distro: ubuntu-18.04, command: /lib/systemd/systemd }
           - { distro: ubuntu-20.04, command: /lib/systemd/systemd }
           - { distro: ubuntu-22.04, command: /lib/systemd/systemd }
-          - { distro: ubuntu-24.04, command: /lib/systemd/systemd }
+          # - { distro: ubuntu-24.04, command: /lib/systemd/systemd }
           - { distro: debian-10, command: /lib/systemd/systemd }
           - { distro: debian-11, command: /lib/systemd/systemd }
           - { distro: debian-12, command: /lib/systemd/systemd }
