--- a/.github/workflows/pgadmin4.yml
+++ b/.github/workflows/pgadmin4.yml
@@ -35,6 +35,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: ansible_collections/ericsysmin/databases
+      
+      - name: run test
+        run: pwd
 
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
