--- a/roles/pgadmin4/tasks/debian.yml
+++ b/roles/pgadmin4/tasks/debian.yml
@@ -1,24 +1,28 @@
 ---
-- name: pgAdmin4 | Install postgresql dependencies
+# code: language=ansible
+
+- name: PgAdmin4 | Install postgresql dependencies
   ansible.builtin.apt:
     name:
       - curl
       - ca-certificates
       - gnupg
 
-- name: pgAdmin4 | Add apt key
+- name: PgAdmin4 | Add apt key
   ansible.builtin.apt_key:
-    url: https://www.postgresql.org/media/keys/ACCC4CF8.asc
+    url: https://www.pgadmin.org/static/packages_pgadmin_org.pub
+    keyring: /usr/share/keyrings/packages-pgadmin-org.gpg
     state: present
 
-- name: pgAdmin4 | Add postgresql repository
+- name: PgAdmin4 | Add postgresql repository
   ansible.builtin.apt_repository:
-    repo: deb http://apt.postgresql.org/pub/repos/apt {{ ansible_distribution_release }}-pgdg main
+    repo: deb [signed-by=/usr/share/keyrings/packages-pgadmin-org.gpg]
+      https://ftp.postgresql.org/pub/pgadmin/pgadmin4/apt/{{ ansible_distribution_release }}
+      pgadmin4 main
     state: present
-    filename: pgdg
+    filename: pgadmin4
     update_cache: true
 
-- name: pgAdmin4 | Install pgAdmin4
+- name: PgAdmin4 | Install pgAdmin4
   ansible.builtin.apt:
-    name: pgAdmin4
-    update_cache: true
+    name: pgadmin4
