--- a/.github/workflows/mongodb.yml
+++ b/.github/workflows/mongodb.yml
@@ -1,18 +1,19 @@
-name: "ericsysmin.databases.mongodb"
+---
+name: ericsysmin.databases.mongodb
 on:
   push:
     paths:
-      - 'roles/mongodb/**'
-      - 'molecule/mongodb/**'
-      - '.github/workflows/mongodb.yml'
+      - roles/mongodb/**
+      - molecule/mongodb/**
+      - .github/workflows/mongodb.yml
   pull_request:
     paths:
-      - 'roles/mongodb/**'
-      - 'molecule/mongodb/**'
-      - '.github/workflows/mongodb.yml'
+      - roles/mongodb/**
+      - molecule/mongodb/**
+      - .github/workflows/mongodb.yml
 jobs:
   mongodb:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     env:
       PY_COLORS: 1
       ANSIBLE_FORCE_COLOR: 1
@@ -20,11 +21,13 @@ jobs:
       fail-fast: true
       matrix:
         molecule_distro:
-          - { "distro":"ubuntu-16.04", "command":"/sbin/init" }
-          - { "distro":"ubuntu-18.04", "command":"/lib/systemd/systemd" }
-          - { "distro":"ubuntu-20.04", "command":"/lib/systemd/systemd" }
-          - { "distro":"debian-9", "command":"/lib/systemd/systemd" }
-          - { "distro":"debian-10", "command":"/lib/systemd/systemd" }
+          - { distro: ubuntu-18.04, command: /lib/systemd/systemd }
+          - { distro: ubuntu-20.04, command: /lib/systemd/systemd }
+          - { distro: ubuntu-22.04, command: /lib/systemd/systemd }
+          # - { distro: ubuntu-24.04, command: /lib/systemd/systemd }
+          - { distro: debian-10, command: /lib/systemd/systemd }
+          - { distro: debian-11, command: /lib/systemd/systemd }
+          - { distro: debian-12, command: /lib/systemd/systemd }
         collection_role:
           - mongodb
     steps:
@@ -33,10 +36,10 @@ jobs:
         with:
           path: ansible_collections/ericsysmin/databases
 
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: 3.12
 
       - name: Install dependencies
         run: |
@@ -44,7 +47,7 @@ jobs:
           curl -fsSL https://get.docker.com -o get-docker.sh
           sudo sh get-docker.sh
           python -m pip install --upgrade pip
-          pip install ansible molecule yamllint ansible-lint docker molecule-docker
+          pip install ansible molecule yamllint ansible-lint molecule-plugins[docker]
 
       - name: Run role tests
         run: >-
