--- a/molecule/mongodb/molecule.yml
+++ b/molecule/mongodb/molecule.yml
@@ -1,4 +1,6 @@
 ---
+# code: language=ansible
+
 dependency:
   name: galaxy
 driver:
@@ -13,7 +15,8 @@ platforms:
     privileged: true
     command: ${MOLECULE_COMMAND:-"sleep infinity"}
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
 provisioner:
   name: ansible
   playbooks:
