--- a/molecule/pgadmin4/converge.yml
+++ b/molecule/pgadmin4/converge.yml
@@ -1,13 +1,18 @@
 ---
+# code: language=ansible
+
 - name: Converge
   hosts: all
   pre_tasks:
     - name: Update package cache
-      package: update_cache=yes
+      ansible.builtin.package:
+        update_cache: true
       changed_when: false
       register: task_result
       until: task_result is success
       retries: 10
       delay: 2
-  roles:
-    - role: ericsysmin.databases.pgadmin4
+  tasks:
+    - name: Run the Ansible role
+      ansible.builtin.include_role:
+        name: ericsysmin.databases.pgadmin4
